这是第一个正式版
其实并不是，只是说出来比较有感觉

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,8 @@
       "type": "lldb",
       "request": "launch",
       "args": [],
-      "cwd": ".",
-      "program": "build/Debug/outDebug"
+      "cwd": "/Users/wildaying/Documents/GitHub/smallwoodbucket/测试文件夹",
+      "program": "/Users/wildaying/Documents/GitHub/smallwoodbucket/测试文件夹/build/Debug/outDebug"
     }
   ]
 }
